# snail

./: .gitignore  AGENTS.md  BREAK-WITH-VALUE.md  BUG_REPORT.md  CLAUDE.md  Cargo.toml  EXPRESSION-BLOCK-PLAN.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  TEST_COVERAGE_ANALYSIS.md  UNIFIED-SNAIL.md  cli.snail  pyproject.toml  requirements.txt  run  segments.md  snail-claude.tar.zst  tag-release.sh  test.py  test.snail
.cargo/: config.toml
.claude/skills/release/: SKILL.md  update_version.sh  validate_version.sh
.gemini/tools/release/: TOOL.md
.giftwrap/: config.toml  setup.sh
.github/workflows/: ci.yml  claude-code-review.yml  release.yml
benchmarks/: README.md  large_file.snail  startup.py
crates/snail-ast/: Cargo.toml  README.md
crates/snail-ast/src/: ast.rs  awk.rs  lib.rs
crates/snail-cli/: Cargo.toml  README.md  build.rs
crates/snail-cli/src/: lib.rs  main.rs
crates/snail-cli/tests/: awk.rs  cli.rs  lower.rs  quotes_in_expressions.rs
crates/snail-cli/tests/common/: mod.rs
crates/snail-codegen/: Cargo.toml  README.md
crates/snail-codegen/src/: expr.rs  feature_detection.rs  helpers.rs  lib.rs  writer.rs
crates/snail-core/: Cargo.toml  README.md
crates/snail-core/src/: lib.rs
crates/snail-error/: Cargo.toml  README.md
crates/snail-error/src/: lib.rs
crates/snail-error/tests/: formatting.rs
crates/snail-lower/: Cargo.toml  README.md
crates/snail-lower/src/: awk.rs  constants.rs  expr.rs  helpers.rs  lib.rs  map.rs  operators.rs  program.rs  py_ast.rs  span.rs  stmt.rs
crates/snail-parser/: Cargo.toml  README.md
crates/snail-parser/examples/: parse_large.rs
crates/snail-parser/src/: awk.rs  expr.rs  lib.rs  literal.rs  preprocess.rs  snail.pest  stmt.rs  string.rs  util.rs
crates/snail-parser/tests/: common.rs  errors.rs  parser.rs  proptest_compact_try_e2e.rs  statement_token_newlines.rs  statements.rs  syntax_expressions.rs  syntax_strings.rs  whitespace_cases.rs  whitespace_harness.rs
crates/snail-proptest/: Cargo.toml
crates/snail-proptest/src/: arbitrary.rs  lib.rs  strategies.rs  utils.rs
crates/snail-proptest/tests/: awk.proptest-regressions  awk.rs  properties.proptest-regressions  properties.rs  snail_features.rs
crates/snail-python/: Cargo.toml  build.rs
crates/snail-python-ast/: Cargo.toml  README.md
crates/snail-python-ast/src/: lib.rs
crates/snail-python/src/: compiler.rs  lib.rs  linecache.rs  profiling.rs
crates/snail-python/src/lower/: awk.rs  break_rewrite.rs  constants.rs  desugar.rs  expr.rs  helpers.rs  map.rs  mod.rs  operators.rs  program.rs  py_ast.rs  stmt.rs  validate.rs  xargs.rs
docs/: DECISIONS.md  PLANNING.md  REFERENCE.md  VALIDATION_COVERAGE_TEST_MATRIX.md
examples/: all_syntax.snail  awk.snail  json.snail  map.snail  snail_import_demo.py  xargs.snail
examples/snail_relpkg/: __init__.py  relmod.py
examples/snail_relpkg/subpkg/: __init__.py  submod.py
extras/arch/: PKGBUILD
extras/completions/: snail.bash  snail.fish  snail.zsh
extras/scripts/: reset-neovim.sh
extras/tree-sitter-snail/: Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
extras/tree-sitter-snail/bindings/c/: tree-sitter-snail.pc.in
extras/tree-sitter-snail/bindings/go/: binding.go  binding_test.go  go.mod
extras/tree-sitter-snail/bindings/node/: binding.cc
extras/tree-sitter-snail/bindings/python/tree_sitter_snail/: __init__.py  binding.c
extras/tree-sitter-snail/bindings/rust/: build.rs  lib.rs
extras/tree-sitter-snail/bindings/swift/TreeSitterSnail/: snail.h
extras/tree-sitter-snail/queries/: highlights.scm
extras/tree-sitter-snail/src/: grammar.json  node-types.json  parser.c
extras/vim/: README.md  filetype.lua
extras/vim/after/queries/snail/: folds.scm  highlights.scm  indents.scm
extras/vim/autoload/: snail.vim
extras/vim/doc/: snail.txt
extras/vim/ftdetect/: snail.vim
extras/vim/ftplugin/: snail.vim
extras/vim/indent/: snail.vim
extras/vim/plugin/: snail.vim
extras/vim/queries/snail/: folds.scm  highlights.scm
extras/vim/syntax/: snail.vim
extras/vscode/: README.md  extension.js  language-configuration.json  package-lock.json  package.json
extras/vscode/assets/: tree-sitter-snail.wasm
extras/vscode/queries/: highlights.scm
extras/vscode/scripts/: build-wasm.sh
plans/: map-mode.md  pipeline-placeholder.md  python-first-snail-cli-plan.md  remove-BEGIN-END.md  ripgrep-regex-awk-plan.md  snail_contains.md
plugin/: snail.vim
python/snail/: __init__.py  cli.py  py2snail.py
python/snail/runtime/: __init__.py  augmented.py  compact_try.py  env.py  force.py  lazy_file.py  lazy_proxy.py  lazy_text.py  path_helper.py  regex.py  structured_accessor.py  subprocess.py  timestamp.py
python/tests/: conftest.py  test_cli.py  test_cli_whitespace_semantics.py  test_py2snail.py
snail/: Cargo.toml
snail/src/: lib.rs  lower.rs
snail/tests/: lower.rs
src/: ast.rs  awk.rs  error.rs  format.rs  launcher.rs  lib.rs  lower.rs  main.rs  parser.rs  python.rs  snail.pest
tests/: awk.rs  bug_hunting.rs  cli.rs  lower.rs  parser.rs  python_integration.rs
tests/common/: mod.rs
