[package]
name = "snail"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
clap = { version = "4", features = ["derive"] }
pest = "2.7"
pest_derive = "2.7"
pyo3 = { version = "0.21", features = ["auto-initialize"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
