[workspace]
resolver = "2"
members = [
    "crates/snail-ast",
    "crates/snail-python-ast",
    "crates/snail-error",
    "crates/snail-parser",
    "crates/snail-lower",
    "crates/snail-codegen",
    "crates/snail-core",
    "crates/snail-cli",
    "crates/snail-proptest",
]

[workspace.package]
edition = "2024"
