[workspace]
resolver = "2"
members = [
    "crates/snail-ast",
    "crates/snail-error",
    "crates/snail-parser",
    "crates/snail-python",
]

[workspace.package]
edition = "2024"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"

[profile.release]
debug = false
lto = "thin"
codegen-units = 1
strip = true
