[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "snail-lang"
version = "0.7.1"
description = "Snail programming language interpreter"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "astunparse>=1.6.3; python_version < '3.9'",
    "jmespath>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.5",
    "pytest",
]

[project.scripts]
snail = "snail.cli:main"

[tool.maturin]
bindings = "pyo3"
python-source = "python"
module-name = "snail._native"
manifest-path = "crates/snail-python/Cargo.toml"
