[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "snail-lang"
version = "0.7.9"
description = "Snail programming language interpreter"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "astunparse>=1.6.3; python_version < '3.9'",
    "jmespath>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.5",
    "black",
    "isort",
    "mypy",
    "pytest",
    "ruff",
]

[project.scripts]
snail = "snail.cli:main"

[tool.maturin]
bindings = "pyo3"
python-source = "python"
module-name = "snail._native"
manifest-path = "crates/snail-python/Cargo.toml"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["python"]

[tool.ruff]
line-length = 88
target-version = "py38"
src = ["python"]
exclude = ["target", ".venv", "build", "dist"]

[tool.mypy]
python_version = "3.12"
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["snail._native"]
ignore_missing_imports = true
