[package]
name = "snail"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
snail-ast = { path = "../crates/snail-ast" }
snail-python-ast = { path = "../crates/snail-python-ast" }
snail-error = { path = "../crates/snail-error" }
snail-parser = { path = "../crates/snail-parser" }
snail-lower = { path = "../crates/snail-lower" }
clap = { version = "4", features = ["derive"] }
pest = "2.7"
pest_derive = "2.7"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
