[package]
name = "snail-core"
version = "0.3.4"
edition.workspace = true

[dependencies]
snail-ast = { path = "../snail-ast" }
snail-python-ast = { path = "../snail-python-ast" }
snail-error = { path = "../snail-error" }
snail-parser = { path = "../snail-parser" }
snail-lower = { path = "../snail-lower" }
snail-codegen = { path = "../snail-codegen" }
