[package]
name = "snail-proptest"
version = "0.6.3"
edition = "2024"

[dependencies]
snail-ast = { path = "../snail-ast" }
snail-parser = { path = "../snail-parser" }
snail-lower = { path = "../snail-lower" }
snail-error = { path = "../snail-error" }
proptest = "1.5"

[dev-dependencies]
tempfile = "3"

[features]
run-proptests = []
