[package]
name = "snail-python"
version = "0.7.1"
edition.workspace = true
build = "build.rs"

[lib]
name = "snail_python"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }
snail-ast = { path = "../snail-ast" }
snail-error = { path = "../snail-error" }
snail-parser = { path = "../snail-parser" }
