[package]
name = "tree-sitter-snail"
description = "Snail grammar for tree-sitter"
version = "0.8.4"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "snail"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-snail"
edition = "2024"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"
